fixed issue with MWE d - always use fO2 when real gas, solubility and condensates

--- a/notebooks/silicon.ipynb
+++ b/notebooks/silicon.ipynb
@@ -505,15 +505,15 @@
     "\n",
     "model_real_withsol = InteriorAtmosphere(species)\n",
     "\n",
-    "mass_fractions = np.random.uniform(-10, 0, number_of_realisations)\n",
+    "mass_fractions = np.random.uniform(1e-10, 1e0, number_of_realisations)\n",
     "\n",
     "\n",
     "mass_constraints = {\n",
     "    \"H\": h_kg * mass_fractions,\n",
-    "    \"O\": 4.96286191942125E+24 * mass_fractions,\n",
+    "    #\"O\": 4.96286191942125E+24 * mass_fractions,\n",
     "    \"Si\": si_kg_magma * mass_fractions,\n",
     "}\n",
-    "#fugacity_constraints = {O2_g.name: IronWustiteBuffer(-5)}\n",
+    "fugacity_constraints = {O2_g.name: IronWustiteBuffer(-5)}\n",
     "\n",
     "model_real_withsol.initialise_solve(\n",
     "    planet=planet,\n",
