Maggie's changes to K2-18b notebook to run the higher pressure cases, with solar to BSE ratios

--- a/notebooks/k2-18b.ipynb
+++ b/notebooks/k2-18b.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Atmodeller initialized with double precision (float64)\n"
+     ]
+    }
+   ],
    "source": [
     "import logging\n",
     "\n",
@@ -53,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +91,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Updated Constraints for High Pressure Cases:\n",
+    "\n",
+    "number_of_realisations = 10000\n",
+    "surface_temperature = 3000.0  # Must be float\n",
+    "planet_mass = 5.15211e25\n",
+    "surface_radius = 1.6647e7\n",
+    "mantle_melt_fraction = 1.0  # 0.1\n",
+    "log10_max_oceans = 4\n",
+    "\n",
+    "np.random.seed(0)\n",
+    "#Vary:\n",
+    "log10_number_oceans = np.random.uniform(2, log10_max_oceans, number_of_realisations)\n",
+    "log10_ch_ratios = np.random.uniform(-2.5, 0.1, number_of_realisations) #Solar to BSE Ratios\n",
+    "log10_nh_ratios = np.random.uniform(-3.0, -1.9, number_of_realisations) #Solar to BSE Ratios\n",
+    "fO2_log10_shifts = np.random.uniform(-5, 5, number_of_realisations)\n",
+    "\n",
+    "#Fix:\n",
+    "#log10_number_oceans = np.full(number_of_realisations, 4)\n",
+    "#log10_ch_ratios = np.full(number_of_realisations, -2.5) #Solar to BSE Ratios\n",
+    "#log10_nh_ratios = np.full(number_of_realisations, -3.0) #Solar to BSE Ratios\n",
+    "#fO2_log10_shifts = np.full(number_of_realisations, -2)\n",
+    "\n",
+    "h_kg = earth_oceans_to_hydrogen_mass(10**log10_number_oceans)\n",
+    "c_kg = h_kg * 10**log10_ch_ratios\n",
+    "n_kg = h_kg * 10**log10_nh_ratios\n",
+    "\n",
+    "mass_constraints = {\n",
+    "    \"H\": h_kg,\n",
+    "    \"C\": c_kg,\n",
+    "    \"N\": n_kg,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,12 +173,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "solver = optx.LevenbergMarquardt\n",
+    "\n",
     "model_ideal_nosol = InteriorAtmosphere(species)\n",
     "\n",
     "fugacity_constraints = {O2_g.name: IronWustiteBuffer(fO2_log10_shifts)}\n",
     "\n",
     "# Models all solve first time so we reduce multistart for speed\n",
-    "solver_parameters = SolverParameters(multistart=1)\n",
+    "solver_parameters = SolverParameters(solver=solver, multistart=1)\n",
     "model_ideal_nosol.solve(\n",
     "    planet=k218b,\n",
     "    mass_constraints=mass_constraints,\n",
@@ -163,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,15 +241,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[12:19:06 - atmodeller.classes             - INFO     ] - species = ['H2O_g', 'H2_g', 'O2_g', 'CO_g', 'CO2_g', 'CH4_g', 'N2_g', 'H3N_g']\n",
+      "[12:19:06 - atmodeller.classes             - INFO     ] - reactions = {0: '1.0 H2O_g + 1.0 CO_g = 1.0 H2_g + 1.0 CO2_g',\n",
+      " 1: '3.0 H2_g + 1.0 CO_g = 1.0 H2O_g + 1.0 CH4_g',\n",
+      " 2: '2.0 H2O_g = 2.0 H2_g + 1.0 O2_g',\n",
+      " 3: '1.5 H2_g + 0.5 N2_g = 1.0 H3N_g'}\n",
+      "[12:19:14 - atmodeller.classes             - INFO     ] - Solve complete\n",
+      "[12:19:14 - atmodeller.output              - INFO     ] - Writing output to excel\n",
+      "[12:19:14 - atmodeller.output              - INFO     ] - Computing to_dataframes output\n",
+      "[12:19:14 - atmodeller.output              - INFO     ] - Computing asdict output\n",
+      "[12:19:44 - atmodeller.output              - INFO     ] - Output written to k218b_ideal_withsol_varyall_SR_3000K.xlsx\n",
+      "[12:19:44 - atmodeller.output              - INFO     ] - Writing output to pickle\n",
+      "[12:19:44 - atmodeller.output              - INFO     ] - Output written to k218b_ideal_withsol_varyall_SR_3000K.pkl\n"
+     ]
+    }
+   ],
    "source": [
+    "solver = optx.LevenbergMarquardt\n",
+    "\n",
     "model_ideal_withsol = InteriorAtmosphere(species)\n",
     "\n",
     "fugacity_constraints = {O2_g.name: IronWustiteBuffer(fO2_log10_shifts)}\n",
     "\n",
-    "solver_parameters = SolverParameters(multistart=1)\n",
+    "solver_parameters = SolverParameters(solver=solver, multistart=1)\n",
     "model_ideal_withsol.solve(\n",
     "    planet=k218b,\n",
     "    mass_constraints=mass_constraints,\n",
@@ -217,10 +287,10 @@
     "# logger.info(solution_ideal_withsol_asdict)\n",
     "\n",
     "# Write the complete solution to Excel\n",
-    "output_ideal_withsol.to_excel(\"k218b_ideal_withsol\")\n",
+    "output_ideal_withsol.to_excel(\"k218b_ideal_withsol_varyall_SR_3000K\")\n",
     "\n",
     "# Write the data to a pickle file with dataframes\n",
-    "output_ideal_withsol.to_pickle(\"k218b_ideal_withsol\")"
+    "output_ideal_withsol.to_pickle(\"k218b_ideal_withsol_varyall_SR_3000K\")"
    ]
   },
   {
@@ -232,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,10 +481,10 @@
     "# logger.info(solution_real_withsol_asdict)\n",
     "\n",
     "# Write the complete solution to Excel\n",
-    "output_real_withsol.to_excel(\"k218b_real_withsol\")\n",
+    "output_real_withsol.to_excel(\"k218b_real_withsol_varyHinv_SR_3000K_IWm2\")\n",
     "\n",
     "# Write the data to a pickle file with dataframes\n",
-    "output_real_withsol.to_pickle(\"k218b_real_withsol\")"
+    "output_real_withsol.to_pickle(\"k218b_real_withsol_varyHinv_SR_3000K_IWm2\")"
    ]
   }
  ],
